# gr-rfml

./: CMakeLists.txt  MANIFEST.md  README.md  remake.sh
DemoFiles/: UDPFastPlotter.ipynb  cgd_model_10a.onnx
apps/: CMakeLists.txt
cmake/Modules/: rfmlConfig.cmake
docs/: CMakeLists.txt  README.rfml
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  function_caller.block.yml  rfml_dnn_onnx_sync.block.yml
include/rfml/: CMakeLists.txt  api.h
lib/: CMakeLists.txt
python/: CMakeLists.txt  __init__.py  dnn_onnx_sync.py
python/bindings/: CMakeLists.txt  python_bindings.cc
swig/: CMakeLists.txt  rfml_swig.i
